# talk-to-me-server

./: .gitignore  LICENSE  README.md  install.bat  install.ps1  install.sh  pyproject.toml  run.ps1  server-control.ps1  start-server.bat  start-server.sh  startserver.bat  stop-server.bat  stop-server.sh
.administration/: future_improvements.md
.superpowers/changelog/: CHANGELOG.md  commited_changes_2026_07_20_21_22_31.md  commited_changes_2026_07_20_21_28_41.md  commited_changes_2026_07_20_23_31_08.md  commited_changes_2026_07_21_00_00_05.md  commited_changes_2026_07_21_00_15_00.md  commited_changes_2026_07_21_00_23_04.md  commited_changes_2026_07_22_13_22_20.md  commited_changes_2026_07_22_14_23_06.md  commited_changes_2026_07_22_15_24_31.md  commited_changes_2026_07_22_15_50_34.md  commited_changes_2026_07_22_16_01_02.md  commited_changes_2026_07_22_16_40_59.md  commited_changes_2026_07_22_17_16_33.md  commited_changes_2026_07_22_17_29_39.md  commited_changes_2026_07_22_19_23_28.md
docs/: api.md
master-data/: benchmark-request.json  install-manifest.json  official-voices.json  request.json  setup.json  voice-license-policy.json
master-data/i18n/: ar.json  bg.json  cs.json  da.json  de.json  el.json  en.json  es.json  et.json  fi.json  fr.json  ga.json  hr.json  hu.json  it.json  ja.json  lt.json  lv.json  mt.json  nl.json  no.json  pl.json  pt.json  ro.json  ru.json  sk.json  sl.json  sv.json  uk.json  zh-Hans.json
scripts/: generate_locales.py
src/talk_to_me_server/: __init__.py  __main__.py  app.py  (+5 more)
tests/: conftest.py
web/: index.html  styles.css
(+102 files in other folders)
